# glitch_resistor

./: .gitignore  README.md  build_passes.sh  build_source_rewriter.sh  install.sh  install_source_rewriter.sh  setup_dev_environment.sh  setup_toolchain.sh  setup_toolchain_osx.sh
emulation/: README.md  install_dependencies.sh  killall.sh
emulation/arm32/branching/: bcc.s  bcs.s  beq.s  bge.s  bgt.s  bhi.s  ble.s  bls.s  blt.s  bmi.s  bne.s  bpl.s  bvc.s  bvs.s
emulation/arm32/return/: bx.s  mov.s  pop.s  run_all.sh
emulation/arm_thumb/branching/: bcc.S  bcs.S  beq.S  bge.S  bgt.S  bhi.S  ble.S  bls.S  blt.S  bmi.S  bne.S  bpl.S  bvc.S  bvs.S  run_all.sh
emulation/arm_thumb/return/: bx.s  mov.s  pop.s
emulation/glitchresistor/: emulator.py  glitchresistor.py
emulation/mips/branching/: README.md  beq.s  beqz.s  bgez.s  bgezal.s  bgtz.s  blez.s  bltz.s  bltzal.s  bne.s
emulation/mips/return/: jr.s
emulation/paper/: beq.s  bne.s  mov.s  nop.s
examples/: README.md
examples/instrumenter/: delay_example.c  integrity.c  integrity_arr.c  no_default.c
examples/instrumenter/branchprotector/: Makefile  branch_example.c  build.sh  glitch_detected.c
examples/instrumenter/delay/: build.sh  delay_example.c  delayfunc.c
examples/instrumenter/integrity/: build.sh  (+2 more)
examples/maximum_hamming/: rs.hpp
experiments/: README.md
experiments/glitching/: README.md  install_cw.sh  install_dependencies.sh
experiments/maximum_hamming/: README.md  hamming.cpp
experiments/random_timing/: README.md  random.c  seed
firmware/: README.md  install_tools_osx.sh
firmware/riscv/: README.md  osx_fixes.sh
firmware/stm32/: README.md  install_stlink.sh
gp_source_rewriter/: CMakeLists.txt  README.md
gp_source_rewriter/examples/: simple.c
gp_source_rewriter/include/: DefenseHelper.h  GlobalProgramInfo.h  PersistentSourceLoc.h  RWTypeDetector.h  RewriteHelper.h  Utils.h
gp_source_rewriter/src/: DefenseHelper.cpp  GlobalProgramInfo.cpp  PersistentSourceLoc.cpp  RWTypeDetector.cpp  RewriteHelper.cpp  SourceRewriter.cpp  Utils.cpp
instrumenter/: CMakeLists.txt  README.md
instrumenter/BranchProtector/: CMakeLists.txt
instrumenter/BranchProtector/src/: BranchProtectorPass.cpp  BranchProtectorPass.cpp.orig
instrumenter/CommonInstrumentationUtils/: CMakeLists.txt
instrumenter/DelayInjector/: CMakeLists.txt
instrumenter/IntegrityProtector/: CMakeLists.txt
instrumenter/IntegrityProtector/include/: FunctionFetcherHelper.h  IntegrityCodeInserter.h  ProtectedDataHelper.h
instrumenter/IntegrityProtector/src/: FunctionFetcherHelper.cpp  IntegrityCodeInserter.cpp  IntegrityProtectorPass.cpp  ProtectedDataHelper.cpp
instrumenter/LoopProtector/: CMakeLists.txt
instrumenter/LoopProtector/src/: LoopProtectorPass.cpp  Utils.cpp
instrumenter/RecheckLoopProtector/: CMakeLists.txt
instrumenter/RecheckLoopProtector/src/: LoopProtectorPass.cpp
instrumenter/RetProtector/: CMakeLists.txt
instrumenter/RetProtector/instrumentation_snippets/: README.md  gr_detected.c
instrumenter/RetProtector/src/: RetProtectorPass.cpp
instrumenter/instrumentation_snippets/: README.md  delayfunc.c  glitch_detected.c  integritycheckfunc.c
(+231 files in other folders)
